--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     </div>
     <div>
         <div id="uiux" class="anchor"></div>
-        <div class="column">
+        <div class="section">
             <h1>UI/UX</h1>
             <div class="project-card">
                 <h2>Canvas Redesign</h2>
                 <h3>A case study on redesigning Canvas, one of the most popular learning platforms, and a close look on how to improve navigability, notifications, and assignment preparation. </h3>
-                <a id="button-uiux" href="">➔</a>
+                <a href="">➔</a>
             </div>
             <div class="project-card">
                 <h2>Mangan Tayon - a Filipino-centric cooking/recipe app</h2>
@@ -62,8 +62,8 @@
             </div>
         </div>
 
-        <div id="uiux" class="anchor"></div>
-        <div class="column">
+        <div id="webdev" class="anchor"></div>
+        <div class="section">
             <h1>Website Development</h1>
             <div class="project-card">
                 <h2>Canvas Redesign</h2>
@@ -73,7 +73,8 @@
         </div>
 
 
-        <div id="3dmodelling" class="column">
+        <div id="3dmodelling" class="anchor"></div>
+        <div class="section">
             <h1>3D Modelling</h1>
             <div class="project-card">
                 <h2>Student's Nook - our org safespace</h2>
