--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="column">
             <h1 id="hello"></h1>
             <h3>I'm a third year Computer Science student in De La Salle University, Manila, who's interested in UI/UX and visual design. Currently, I'm the Publicity and Creatives Vice President of the home org of College of Computer Studies, La Salle Computer Society, and Design Lead of Developer Student Club Taft.</h3>
-            <div class="navigation">
+            <div class="navigation unselectable">
                 <a id="button-uiux" href="#uiux">UI/UX</a>
                 <a id="button-uiux" href="#webdev">Web Development</a>
                 <a id="button-uiux" href="#3dmodelling">3D modelling</a>
@@ -46,7 +46,7 @@
             <div class="project-card">
                 <h2>Canvas Redesign</h2>
                 <h3>A case study on redesigning Canvas, one of the most popular learning platforms, and a close look on how to improve navigability, notifications, and assignment preparation. </h3>
-                <a href="">➔</a>
+                <a class="unselectable">➔</a>
             </div>
             <div class="project-card">
                 <h2>Mangan Tayon - a Filipino-centric cooking/recipe app</h2>
