--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Karla&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>Sharmaine</title>
 
 </head>
 <body onload="onLoad()">
