changed style for article

--- a/canvas.html
+++ b/canvas.html
@@ -29,19 +29,15 @@
                 </small>
             </i>
             <hr> -->
-            <h2>Canvas is a digital e-learning platform we’ve been using in our university.</h2>
-            <p>It’s where our professors post announcements, discussion boards, modules, lecture recording PDFs—you name it—
-                so one can only imagine how integral it is for remote learning. I cannot imagine not using Canvas during the 
-                pandemic, really, but after years of using it, we, a team of six, determined that a lot can still be improved.</p>
-
-            <p>As with most UI/UX redesign case studies, we aimed to make the app more intuitive and provide a better experience for
-                the users. We wanted to answer:</p>
-            <div class="text-break"></div>
             <h1 class="large">How can we improve the implementation of assignments in Canvas in terms of
                 <u>clarity</u>, <u>discoverability</u>, and <u>management</u>?</h1>
             <div class="text-break"></div>
+            <h2>Canvas is a digital e-learning platform we’ve been using in our university.</h2>
+            <p>It’s where our professors post announcements, discussion boards, modules, lecture recording PDFs—you name it—so one can only imagine how integral it is for remote learning. I cannot imagine not using Canvas during the pandemic, really, but after years of using it, we, a team of six, determined that a lot can still be improved.</p>
+
+            <p>As with most UI/UX redesign case studies, we aimed to make the app more intuitive and provide a better experience for the users. Through this journey, I also wanted to learn the design process first-hand and its various steps.</p>
+            <div class="text-break"></div>
                 
-            <p>Through this journey, I also wanted to learn the design process first-hand and its various steps.</p>
             <div class="text-break"></div>
             <div class="section-break"></div>
         </div>
@@ -65,6 +61,8 @@
         <div class="text-break"></div>
         <div class="text-center">
             <img src="assets/canvas/design system.png"/>
+            <br>
+            <small>Design system created in Figma.</small>
         </div>
 
         <div class="section-break"></div>            
@@ -86,15 +84,23 @@
             <ul>
                 <li><p><b>Condense multiple sections in courses, emphasizing the Modules page.</b> This establishes uniformity across all courses, hopefully making it less confusing for users and prevent users like Achiever Alexandria from running through every section of Canvas for assignments.</p></li>
                 <li><p><b>Add a filter option in the Modules page </b> for situations wherein the user is looking for a certain item type, such as assignments or discussion boards. This would also allow batch downloading of files.</p></li>
-                <div class="text-center"><img src="assets/canvas/navigation-1.png"/></div>
+                <div class="text-center">
+                    <img src="assets/canvas/navigation-1.png"/>
+                    <br>
+                    <small>Course home page with filter options. Other sections were also condensed.</small>
+                </div>
                 <li><p><b>Add a separate section for settings, and move Notification Settings there.</b> Previously, the settings could only be found by going into Account, and then Settings, which made it difficult for some users to find or even discover.</p></li>
                 <div class="text-center">
-                    <img src="assets/canvas/navigation-2.png"/>
+                    <img src="assets/canvas/navigation-2.png" class="project-image"/>
+                    <br>
+                    <small>Panel for settings, which is now accessible everywhere.</small>
                 </div>
                 <li><p><b>Add a button with download text and icon indicator</b> to the right, since the toggles for the selecting which files to download were also at the right. Both the “download” text and icon were included to provide clarity. </p></li>
                 <li><p><b>Add an indication of the number of files selected, and button to deselect all files,</b> similar to when selecting emails in Gmail.</p></li>
                 <div class="text-center">
                     <img src="assets/canvas/navigation-3.png"/>
+                    <br>
+                    <small>Course home page with filters. Selected files can be downloaded.</small>
                 </div>
             </ul>
 
@@ -114,12 +120,16 @@
                 <li><p><b>Made font weight heavier and added a green dot for unread notifications</b>, making it more noticeable for users.</p></li>
                 <div class="text-center">
                     <img src="assets/canvas/notifications-1.png"/>
+                    <br>
+                    <small>Notification panel.</small>
                 </div>
                 <li><p><b>Easier access to notification settings.</b> This also ties into navigation. Icons in the Notification Settings page were also turned into drop downs instead for readability.</p></li>
                 <li><p><b>Add other notification settings</b>, such as notifying when a deadline is close and a submission still hasn’t been made.</p></li>
                 <li><p><b>Add an add contact info button.</b></p></li>
                 <div class="text-center">
                     <img src="assets/canvas/notifications-2.png"/>
+                    <br>
+                    <small>Notification settings page. The icon buttons were also changed to dropdowns.</small>
                 </div>
             </ul>
             
@@ -143,22 +153,28 @@
                 <li><p><b>Add a tab for “preview” mode</b> so users can easily switch back and forth between “preview” and “edit” mode (inspired by Github’s text editor).</p></li>
                 <div class="text-center">
                     <img src="assets/canvas/preparation-3.png"/>
+                    <br>
+                    <small>Preparing a text box entry for submitting assignments.</small>
                 </div>
                 <li><p><b>Added a modal for showing users that an autosave feature has been implemented.</b> Some users told us that they didn’t realize that Canvas had an autosave feature, so we wanted to notify users.</p></li>
                 <li><p><b>Add “Autosaved on ...” to indicate that their work has been autosaved.</b> Previously (as far as we know), there wasn’t really any feedback from the platform to indicate this to the user.</p></li>
                 <div class="text-center">
                     <img src="assets/canvas/preparation-1.png"/>
+                    <br>
+                    <small>Modal for notifying users of the autosave feature, as well as showing importance to indicator for last autosaved.</small>
                 </div>
                 <li><p><b>Add a full-screen mode for the text editor</b> for longer assignments.</p></li>
                 <div class="text-center">
                     <img src="assets/canvas/preparation-2.png"/>
+                    <br>
+                    <small>Full-screen text editor.</small>
                 </div>
             </ul>
         </div>
         <div class="section-break"></div>
     </div>
 
-    <div class="section wide">
+    <div class="tight center">
         <div class="section-break"></div>
         <h1>Results</h1>
 
@@ -166,12 +182,12 @@
 
         <p>We also asked the final interviewees to self-rate their experience during usability testing using the NASA Task Load Index.</p>
 
-        <h2>All in all, we realized that what needs to improve is how information is presented such that it’s not overwhelming for users.</h2>
-        <p>Canvas has plenty of functionality already, and is by no means an underpowered e-learning platform. Canvas also needs to give user feedback for some of their features, like autosaving. Priorities of users also need to be taken into account—for example, making sure they’re able to pass assignments on time, and that they’re even notified of assignments in the first place!</p>
+        <p>All in all, we realized that what needs to improve is how information is presented such that it’s not overwhelming for users.</p>
+        <p>Canvas has plenty of functionality already, and is by no means an underpowered e-learning platform. Canvas also needs to give user feedback for some of their features, like autosaving. Users’ priorities also need to be taken into account—for example, making sure they’re able to pass assignments on time, and that they’re even notified of assignments in the first place.</p>
         <div class="section-break"></div>
     </div>
 
-    <div class="bluemode ">
+    <div class="bluemode">
         <div class="section-break"></div>
         <div class="tight center">
             <p>Throughout this experience, here’s what I learned:</p>
