--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="assets/favicon.png">
     
-    <link rel="stylesheet" href="1.css">
+    <link rel="stylesheet" href="styles/home.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- <script>
         loadCSS();
