added results, changed to sass

--- a/canvas.html
+++ b/canvas.html
@@ -182,6 +182,10 @@
 
         <p>We also asked the final interviewees to self-rate their experience during usability testing using the NASA Task Load Index.</p>
 
+        <div class="text-center">
+            <img src="assets/canvas/results-1.png"/>
+        </div>
+        
         <p>All in all, we realized that what needs to improve is how information is presented such that it’s not overwhelming for users.</p>
         <p>Canvas has plenty of functionality already, and is by no means an underpowered e-learning platform. Canvas also needs to give user feedback for some of their features, like autosaving. Users’ priorities also need to be taken into account—for example, making sure they’re able to pass assignments on time, and that they’re even notified of assignments in the first place.</p>
         <div class="section-break"></div>
