--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 
                 <p>A case study on redesigning Canvas, one of the most popular e-learning platforms, and a close look on how to improve navigability, notifications, and assignment preparation. </p>
                 <div class="navigation">
-                    <a class="unselectable new-tab" href="canvas.html">➔</a>
+                    <a class="unselectable" href="canvas.html" target="_blank">➔</a>
                 </div>
             </article>
 
@@ -131,7 +131,7 @@
                             <h3>De La Salle University</h3>
                             <p>— Bachelor of Science in Computer Science, Major in Software Technology</p>
                         </span>
-                        <p>2019 — 2022</p>
+                        <p>2019 – 2022</p>
                     </div>
                     <hr>
                 </article>
@@ -150,7 +150,7 @@
                             <h3>Center For Complexity & Emerging Technologies</h3>
                             <p>— Research Assisstant</p>
                         </span>
-                        <p>2021 — 2022</p>
+                        <p>2021 – 2022</p>
                     </div>
                     <hr>
                 </article>
@@ -161,7 +161,7 @@
                             <h3>La Salle Computer Society</h3>
                             <p>— Vice President of Publicity and Creatives</p>
                         </span>
-                        <p>2020 — 2021</p>
+                        <p>2020 – 2021</p>
                     </div>
                     <hr>
                 </article>
@@ -188,13 +188,13 @@
         <header>
             <h1>Let's work together!</h1>
             <div class="navigation unselectable">
-                <a href="mailto:sharmainegaw@gmail.com" class="new-tab">sharmainegaw@gmail.com</a>
+                <a href="mailto:sharmainegaw@gmail.com">sharmainegaw@gmail.com</a>
             </div>
         </header>
         <div class="navigation">
-            <a class="square-button unselectable new-tab" target="_blank" href="https://www.behance.net/shargaw" target="_blank"><img class="img-icon"src="/assets/icon-behance.png"></a>
-            <a class="square-button unselectable new-tab" target="_blank" href="https://www.linkedin.com/in/sharmaineg/"><img class="img-icon"src="/assets/icon-linkedin.png"></a>
-            <a class="square-button unselectable new-tab" target="_blank" href="https://m.me/sharmainegaw"><img class="img-icon"src="/assets/icon-messenger.png"></a>
+            <a class="square-button unselectable" target="_blank" href="https://www.behance.net/shargaw" target="_blank"><img class="img-icon"src="/assets/icon-behance.png"></a>
+            <a class="square-button unselectable" target="_blank" href="https://www.linkedin.com/in/sharmaineg/"><img class="img-icon"src="/assets/icon-linkedin.png"></a>
+            <a class="square-button unselectable" target="_blank" href="https://m.me/sharmainegaw"><img class="img-icon"src="/assets/icon-messenger.png"></a>
         </div>
     </footer>
 </body>
@@ -206,7 +206,7 @@
         var i = 0;
         var j = 0;
         var text1 = "Hello!"; /* The text */
-        var text2 = "I'm Sharmaine. :-)"
+        var text2 = "I'm Sharmaine. :-)"
         var speed = 75; /* The speed/duration of the effect in milliseconds */
         var field1 = $("#hero-title-1");
         var field2 = $("#hero-title-2");
