--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </section>
         
         <div id="education-experience" class="anchor"></div>
-        <section class="container education">
+        <section class="container education bluemode">
             <div class="section">
                 <header>
                     <h1 class="slide-up">Education</h1>
@@ -187,7 +187,7 @@
     <footer class="contact-container">
         <header>
             <h1>Let's work together!</h1>
-            <div class="navigation unselectable">
+            <div class="navigation">
                 <a href="mailto:sharmainegaw@gmail.com">sharmainegaw@gmail.com</a>
             </div>
         </header>
