made dates smaller

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <header class="project-card-title">
                     <h2>Redesigning Canvas, an e-learning platform</h2>
-                    <p>October 2020 – February 2021</p>
+                    <small>October 2020 – February 2021</small>
                 </header>
 
                 <div class="chip">UI/UX</div>  
@@ -96,7 +96,7 @@
 
                 <header class="project-card-title">
                     <h2>Mangan Tayon</h2>
-                    <p>2021</p>
+                    <small>2021</small>
                 </header>
 
                 <div class="chip">UI/UX</div>  
@@ -110,7 +110,7 @@
 
                 <header class="project-card-title">
                     <h2>FilWordNet Annotation Tool</h2>
-                    <p>December 2021 – <br>January 2022</p>
+                    <small>December 2021 – <br>January 2022</small>
                 </header>
 
                 <div class="chip">Web Development</div>
