updated projects section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <header class="project-card-title">
                     <h2>Redesigning Canvas, an e-learning platform</h2>
-                    <small>October 2020 – February 2021</small>
+                    <!-- <small>October 2020 – February 2021</small> -->
                 </header>
 
                 <div class="chip">UI/UX</div>  
@@ -75,32 +75,21 @@
                 </div>
             </article>
 
-            <!-- <article class="project-card slide-up">
-                <div class="img-container">
-                    <img src="/assets/mangan.png" class="project-image">
-                </div>
-
-                <header class="project-card-title">
-                    <h2>Dethroneco</h2>
-                    <p>July 2020 – September 2021</p>
-                </header>
-
-                <div class="chip">Web Development</div>
-                <p>A classic e-commerce web application built from scratch in a remote team of 5, using Node JS and MongoDB.</p>
-            </article> -->
-
             <article class="project-card slide-up">
                 <div class="img-container">
                     <img src="/assets/mangan.png" class="project-image">
                 </div>
 
                 <header class="project-card-title">
-                    <h2>Mangan Tayon</h2>
-                    <small>2021</small>
+                    <h2>Mangan Tayon, a grocery shopping app</h2>
+                    <!-- <small>2022</small> -->
                 </header>
 
                 <div class="chip">UI/UX</div>  
-                <p>A prototype of a gamified cooking and recipe app to engage users and guide newbies on how to cook Filipino cuisine.</p>
+                <p>A prototype of a grocery list recipe app that creates a grocery list for you based on recipes you've chosen, built using Figma.</p>
+                <div class="navigation">
+                    <a class="unselectable" href="mangan.html" target="_blank">➔</a>
+                </div>
             </article>
 
             <article class="project-card slide-up">
@@ -110,11 +99,14 @@
 
                 <header class="project-card-title">
                     <h2>FilWordNet Annotation Tool</h2>
-                    <small>December 2021 – <br>January 2022</small>
+                    <!-- <small>December 2021 – <br>January 2022</small> -->
                 </header>
 
                 <div class="chip">Web Development</div>
                 <p>An annotation tool for our thesis, FilWordNet, built using Next JS and MongoDB, and deployed using Vercel. </p>
+                <div class="navigation">
+                    <a class="unselectable" href="filwordnet.html" target="_blank">➔</a>
+                </div>
             </article>
         </section>
         
