removed import font statement

--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
     </script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-
     <title>Sharmaine</title>
 </head>
 <body onload="onLoad()">
@@ -81,12 +76,12 @@
                 </div>
 
                 <header class="project-card-title">
-                    <h2>Mangan Tayon, a grocery shopping app</h2>
+                    <h2>Mangan Tayon, a grocery shopping list app</h2>
                     <!-- <small>2022</small> -->
                 </header>
 
                 <div class="chip">UI/UX</div>  
-                <p>A prototype of a grocery list recipe app that creates a grocery list for you based on recipes you've chosen, built using Figma.</p>
+                <p>A prototype of a grocery list that creates a grocery list for you based on recipes you've chosen, built using Figma.</p>
                 <div class="navigation">
                     <a class="unselectable" href="mangan.html" target="_blank">➔</a>
                 </div>
