--- a/mangan.html
+++ b/mangan.html
@@ -7,12 +7,7 @@
     <link rel="stylesheet" href="styles/article.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-
-    <title>Mangan Tayon</title>
+    <title>Mangan Tayon, a grocery shopping list app</title>
 
 </head>
 <body>
