--- a/index.html
+++ b/index.html
@@ -33,13 +33,54 @@
                 </header>
                 <p>I'm a fourth year Computer Science student in De La Salle University, Manila, who's passionate about art, UI/UX, and visual design.</p>
                 <nav class="navigation unselectable">
-                    <a id="button-uiux" href="#projects">Projects</a>
-                    <!-- <a id="button-uiux" href="#art">Resume</a>-->
-                    <a id="button-uiux" href="#education-experience">Education & Experience</a>
+                    <a href="#projects">Projects</a>
+                    <a href="#education-experience">Education & Experience</a>
                 </nav>
             </article>
             <div class="img-container">
                 <img src="assets/face.png" class="hero-image unselectable">
+            </div>
+            <br>
+        </div>
+        <br class="large">
+        <div class="skills-wrapper unselectable">
+            <div class="skills-container">
+                <div class="skill">
+                    <img class="img-icon"src="/assets/skills/html.png">
+                    <small>HTML</small>
+                </div>
+                <div class="skill">
+                    <img class="img-icon"src="/assets/skills/css.png">
+                    <small>CSS</small>
+                </div>
+                <div class="skill">
+                    <img class="img-icon"src="/assets/skills/sass.png">
+                    <small>Sass</small>
+                </div>
+                <div class="skill">
+                    <img class="img-icon"src="/assets/skills/javascript.png">
+                    <small>JavaScript</small>
+                </div>
+                <div class="skill">
+                    <img class="img-icon"src="/assets/skills/nodejs.png">
+                    <small>NodeJS</small>
+                </div>
+                <div class="skill">
+                    <img class="img-icon"src="/assets/skills/react.png">
+                    <small>React</small>
+                </div>
+                <div class="skill">
+                    <img class="img-icon"src="/assets/skills/nextjs.png">
+                    <small>NextJS</small>
+                </div>
+                <div class="skill">
+                    <img class="img-icon"src="/assets/skills/mongodb.png">
+                    <small>MongoDB</small>
+                </div>
+                <div class="skill">
+                    <img class="img-icon"src="/assets/skills/git.png">
+                    <small>Git</small>
+                </div>
             </div>
         </div>
     </section>
