--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                     <small>Sass</small>
                 </div>
                 <div class="skill">
+                    <img class="img-icon"src="/assets/skills/figma.png">
+                    <small>Figma</small>
+                </div>
+                <div class="skill">
                     <img class="img-icon"src="/assets/skills/javascript.png">
                     <small>JavaScript</small>
                 </div>
@@ -107,7 +111,7 @@
                 
                 <p>A case study on redesigning Canvas, one of the most popular e-learning platforms, and a close look on how to improve navigability, notifications, and assignment preparation. </p>
                 <div class="navigation">
-                    <a class="unselectable" href="canvas.html" target="_blank">➔</a>
+                    <a class="unselectable" href="work/canvas.html" target="_blank">➔</a>
                 </div>
             </article>
 
@@ -124,7 +128,7 @@
                 <div class="chip">UI/UX</div>  
                 <p>A prototype of a grocery list that creates a grocery list for you based on recipes you've chosen, built using Figma.</p>
                 <div class="navigation">
-                    <a class="unselectable" href="mangan.html" target="_blank">➔</a>
+                    <a class="unselectable" href="work/mangan.html" target="_blank">➔</a>
                 </div>
             </article>
 
@@ -141,7 +145,7 @@
                 <div class="chip">Web Development</div>
                 <p>An annotation tool for our thesis, FilWordNet, built using Next JS and MongoDB, and deployed using Vercel. </p>
                 <div class="navigation">
-                    <a class="unselectable" href="filwordnet.html" target="_blank">➔</a>
+                    <a class="unselectable" href="work/filwordnet.html" target="_blank">➔</a>
                 </div>
             </article>
         </section>
@@ -220,9 +224,9 @@
             </div>
         </header>
         <div class="navigation">
-            <a class="square-button unselectable" target="_blank" href="https://www.behance.net/shargaw" target="_blank"><img class="img-icon"src="/assets/icon-behance.png"></a>
-            <a class="square-button unselectable" target="_blank" href="https://www.linkedin.com/in/sharmaineg/"><img class="img-icon"src="/assets/icon-linkedin.png"></a>
-            <a class="square-button unselectable" target="_blank" href="https://m.me/sharmainegaw"><img class="img-icon"src="/assets/icon-messenger.png"></a>
+            <a class="square-button unselectable" target="_blank" href="https://www.behance.net/shargaw" target="_blank"><img class="img-icon"src="/assets/socials/icon-behance.png"></a>
+            <a class="square-button unselectable" target="_blank" href="https://www.linkedin.com/in/sharmaineg/"><img class="img-icon"src="/assets/socials/icon-linkedin.png"></a>
+            <a class="square-button unselectable" target="_blank" href="https://m.me/sharmainegaw"><img class="img-icon"src="/assets/socials/icon-messenger.png"></a>
         </div>
     </footer>
 </body>
