--- a/index.html
+++ b/index.html
@@ -164,9 +164,7 @@
                     <hr>
                 </article>
 
-                <br>
-                <br>
-                <br>
+                <br class="large">
                 
                 <header>
                     <h1 class="slide-up">Experience</h1>
