added github link

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
             </div>
         </header>
         <div class="navigation">
+            <a class="square-button button unselectable" target="_blank" href="https://github.com/sharmainegaw/" target="_blank"><img class="img-icon"src="/assets/socials/icon-github.png"></a>
             <a class="square-button button unselectable" target="_blank" href="https://www.behance.net/shargaw" target="_blank"><img class="img-icon"src="/assets/socials/icon-behance.png"></a>
             <a class="square-button button unselectable" target="_blank" href="https://www.linkedin.com/in/sharmaineg/"><img class="img-icon"src="/assets/socials/icon-linkedin.png"></a>
             <a class="square-button button unselectable" target="_blank" href="https://m.me/sharmainegaw"><img class="img-icon"src="/assets/socials/icon-messenger.png"></a>
